--- a/style/homepage/produtos.css
+++ b/style/homepage/produtos.css
@@ -15,6 +15,7 @@
     width: 100%;
     grid-template-columns: repeat(auto-fit,minmax(280px, auto)); 
     grid-gap: 2rem;
+    margin-top: 2rem;
 }
 
 .produtos article{
