--- a/style/homepage/main.css
+++ b/style/homepage/main.css
@@ -1,5 +1,5 @@
 main.container{
-    padding: 2rem  0!important;
+    padding: 2rem  1rem!important;
     display: flex;  
     flex-direction: column;
     align-items: center;
